fix single post post_titles not hyperlinked
no reason for it, looks bad too.

You have arrived at your destination.
Why leave to go to your destination.

--- a/assets/css/src/editor.less
+++ b/assets/css/src/editor.less
@@ -15,9 +15,9 @@ h1 {
 h2 {
 	// Used for titles of posts.
 	margin-bottom: @space;
+	font-size: 1.5em;
 	&,
 	a {
-		font-size: 1.2em;
 		font-weight: 500;
 		border-bottom: 1px solid transparent;
 	}
